deployment/dev/master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: master
  name: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: master
    spec:
      containers:
      - name: master
        image: julesyoungberg/distributed-evolution-master
        imagePullPolicy: ""
        ports:
        - containerPort: 9000
        - containerPort: 8080
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
