deployment/dev/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 5
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: worker
    spec:
      containers:
      - name: worker
        image: julesyoungberg/distributed-evolution-worker
        imagePullPolicy: ""
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
