deployment/dev/sentinel-replica-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentinel-replica
spec:
  ports:
  - port: 26379
    targetPort: 26379
  selector:
    app: sentinel-replica
