deployment/dev/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ui
  name: ui
spec:
  type: LoadBalancer
  selector:
    app: ui
  ports:
  - port: 80
    targetPort: 3000
status:
  loadBalancer: {}
