deployment/dev/ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    # kubernetes.io/ingress.class: nginx
    # ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
  - host: distributed.ga
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          serviceName: master
          servicePort: 80
      - path: /
        backend:
          serviceName: ui
          servicePort: 80
